# aiops-wrap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aiops_wrap/: __init__.py  __main__.py  cli.py  config.py  join.py  wrap.py
tests/: conftest.py  test_cli.py  test_config.py  test_join.py  test_signing_vector.py  test_wrap.py
